spacing fix

--- a/homepage.css
+++ b/homepage.css
@@ -259,7 +259,7 @@ noscript a:hover {
 
 /* HOW TO RESET */
 #how-to-reset .cloud {
-    margin-bottom: 24px;
+    margin-bottom: 55px;
 display: block;
 margin-left: auto;
 margin-right: auto;
